[package]
name = "rust-srt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "controller"
path = "src/controller.rs"

[[bin]]
name = "tenant"
path = "src/tenant.rs"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
image = "0.25.8"
opencv = "0.97.0"
srt-tokio = "0.4.4"
tokio = { version = "1.48.0", features = ["full"] }
