[package]
name = "rust-srt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "controller"
path = "src/controller.rs"

[[bin]]
name = "tenant"
path = "src/tenant.rs"

[[bin]]
name = "master"
path = "src/master.rs"

[[bin]]
name = "slave"
path = "src/slave.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[[bin]]
name = "sender_debug"
path = "src/sender_debug.rs"

[[bin]]
name = "receiver_debug"
path = "src/receiver_debug.rs"

[[bin]]
name = "ts_streamer"
path = "src/ts_streamer.rs"

[dependencies]
ac-ffmpeg = "0.19.0"
anyhow = "1.0.100"
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
image = "0.25.8"
opencv = { version = "0.97.0" }
srt-tokio = { version="0.4.4", features = ["ac-ffmpeg"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"

